* NEW overflow avoidance extends range of arguments handled by complex division
* NEW largely extended pcl5 terminal supports PCL5e/PCL5c printers
* NEW revised pstricks LaTeX terminal
* NEW extended dospc terminal (DOS / OpenWatcom)
* EXPERIMENTAL internal support for appending to existing arrays
* EXPERIMENTAL "set mouse mouseformat function <stringval_from_xy(x,y)>"
* CHANGE remove deprecated command "update"
* CHANGE remove deprecated option "thru"
* CHANGE special case optimization of nonlinear code to speed up logscale
* CHANGE windows terminal can print using Direct2D
* CHANGE windows terminal supports color fonts (Direct2D)
* CHANGE arrow head size can be decoupled from arrow size
* CHANGE allow array size to be determined automatically from initializer
* CHANGE apply trange to sampling on pseudofile '+'
* CHANGE move tgif terminal to "legacy" status; build only if configured
* CHANGE imaginary values from the using spec of a 2D plot are treated as NaN
* CHANGE remove compile option EXTENDED_COLOR_SPECS used only by vgagl.trm
* CHANGE remove linux and vgagl terminals
* CHANGE remove undocumented EXPERIMENTAL option for pm3d filled contours
* FIX allow mixed use of in-key plot titles and manually placed titles
* FIX open/close path for polygons

New features introduced to 5.2 in patchlevel releases
=====================================================
* NEW "set grid {no}vertical" adds grid lines in the xz and xz planes
* NEW "set cntrparam {firstlinetype N} {{un}sorted}"
* NEW set table separator {tab|comma|"char"} allows creation of csv files
* NEW hotkey for changing azimuth in 3D plots with mousing
* NEW splot ... with lines title at {beg|end}
* NEW Rework gstrptime() to handle relative time formats tH tM tS
* NEW command "set rgbmax <value>" controls interpretation of input RGB values

New features, changes and fixes in gnuplot version 5.2 (initial release)
========================================================================
* NEW plot styles